WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91155
[chromium] Root invalidations for RTL pages need to be in the right space
https://bugs.webkit.org/show_bug.cgi?id=91155
Summary
[chromium] Root invalidations for RTL pages need to be in the right space
Adrienne Walker
Reported
2012-07-12 15:26:32 PDT
[chromium] Root invalidations for RTL pages need to be in the right space
Attachments
Patch
(5.84 KB, patch)
2012-07-12 15:35 PDT
,
Adrienne Walker
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2012-07-12 15:35:15 PDT
Created
attachment 152083
[details]
Patch
Adrienne Walker
Comment 2
2012-07-12 15:37:31 PDT
This is to fix
http://code.google.com/p/chromium/issues/detail?id=136078
Kenneth Russell
Comment 3
2012-07-12 15:40:33 PDT
Comment on
attachment 152083
[details]
Patch Nice fix and test. r=me
Dana Jansens
Comment 4
2012-07-12 15:45:03 PDT
agree, lgtm
Adrienne Walker
Comment 5
2012-07-12 15:54:12 PDT
***
Bug 90761
has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 6
2012-07-12 16:39:00 PDT
Comment on
attachment 152083
[details]
Patch Clearing flags on attachment: 152083 Committed
r122529
: <
http://trac.webkit.org/changeset/122529
>
WebKit Review Bot
Comment 7
2012-07-12 16:39:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug